{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 169,
  "lineage": "5d81fab3-f421-6599-87df-b9796dfb9e01",
  "resources": [
    {
      "module": "module.vpc_endpoints_ap_southeast_1",
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "module.vpc_endpoints_ap_southeast_1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-004a377b92163bec0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-004a377b92163bec0",
            "cidr_block": "10.18.0.0/23",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07ec99085bb474ea3",
                "cidr_block": "10.18.0.0/23",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-837d5de4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-004a377b92163bec0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0815b1a6d4731c6e9",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "dx-cv",
              "Environment": "Dev",
              "Managed": "Terraform",
              "Name": "dx-cv-Dev-VPC",
              "Owner": "dx-cv",
              "Project": "dx-cv",
              "Usage": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-004a377b92163bec0",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 28 03:44:32 IST 2024"
            }
          }
        },
        {
          "index_key": "vpc-018f374d4d2269e9b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-018f374d4d2269e9b",
            "cidr_block": "10.7.0.0/24",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0bacaa56493c8efe4",
                "cidr_block": "10.7.0.0/24",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-837d5de4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-018f374d4d2269e9b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04dc2cf64defea554",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "digibot",
              "Managed": "Terraform",
              "Name": "DigiBotQa-VPC",
              "Owner": "digibot",
              "Project": "digibot",
              "Usage": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-018f374d4d2269e9b",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 28 03:44:27 IST 2024"
            }
          }
        },
        {
          "index_key": "vpc-02f15860069647990",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-02f15860069647990",
            "cidr_block": "10.13.0.0/22",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-01dc4020dec0db076",
                "cidr_block": "10.13.0.0/22",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-837d5de4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02f15860069647990",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-017258d267f9315a5",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "mnc",
              "Name": "ModelNameConversionUat-VPC",
              "Owner": "ModelNameConversion",
              "Project": "mnc",
              "Usage": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-02f15860069647990",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 28 03:44:38 IST 2024"
            }
          }
        },
        {
          "index_key": "vpc-0379fdb17072f4036",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-0379fdb17072f4036",
            "cidr_block": "10.12.0.0/22",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0979f8ec12998d451",
                "cidr_block": "10.12.0.0/22",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-837d5de4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0379fdb17072f4036",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-004de83c281de81bb",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "mnc",
              "Name": "ModelNameConversionDev-VPC",
              "Owner": "ModelNameConversion",
              "Project": "mnc",
              "Usage": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-0379fdb17072f4036",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 28 03:44:39 IST 2024"
            }
          }
        },
        {
          "index_key": "vpc-038e9a438ab205c10",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-038e9a438ab205c10",
            "cidr_block": "10.22.0.0/23",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-04ecacb50fa518c9b",
                "cidr_block": "10.22.0.0/23",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-837d5de4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-038e9a438ab205c10",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0085d2fb4725aeac5",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "VX",
              "Managed": "Terraform",
              "Name": "vxdev-VPC",
              "Owner": "VX",
              "Project": "VxDev",
              "Usage": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-038e9a438ab205c10",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 28 03:44:23 IST 2024"
            }
          }
        },
        {
          "index_key": "vpc-0434c079d71746cb3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-0434c079d71746cb3",
            "cidr_block": "10.21.0.0/23",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0fbd7c71fa9229f31",
                "cidr_block": "10.21.0.0/23",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-837d5de4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0434c079d71746cb3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0247536392723b9e5",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "SpotBoy",
              "Environment": "Dev",
              "Managed": "Terraform",
              "Name": "SpotBoy-Dev-VPC",
              "Owner": "SpotBoy",
              "Project": "SpotBoy",
              "Usage": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-0434c079d71746cb3",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 28 03:44:28 IST 2024"
            }
          }
        },
        {
          "index_key": "vpc-063ed0302d264fdff",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-063ed0302d264fdff",
            "cidr_block": "10.25.0.0/23",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-025d4ea159ad924b2",
                "cidr_block": "10.25.0.0/23",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-837d5de4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-063ed0302d264fdff",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-013e09472217210f5",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "Digibot",
              "Environment": "Dev",
              "Initiative": "Digibot-Dev-ecs",
              "Managed": "Terraform",
              "Name": "Digibot-Dev-VPC",
              "Owner": "Digibot",
              "Project": "Digibot",
              "Usage": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-063ed0302d264fdff",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 28 03:44:29 IST 2024"
            }
          }
        },
        {
          "index_key": "vpc-069564656011acce9",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-069564656011acce9",
            "cidr_block": "10.19.0.0/23",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-00aaa7d3130b0b19b",
                "cidr_block": "10.19.0.0/23",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-837d5de4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-069564656011acce9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0154518af6b3cb7bd",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "Maas-blockchain",
              "Environment": "Dev",
              "Managed": "Terraform",
              "Name": "Maas-blockchain-Dev-VPC",
              "Owner": "Maas-blockchain",
              "Project": "Maas-blockchain",
              "Usage": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-069564656011acce9",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 28 03:44:36 IST 2024"
            }
          }
        },
        {
          "index_key": "vpc-06e12140e5b9511a9",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-06e12140e5b9511a9",
            "cidr_block": "10.8.0.0/22",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0d8be1b3041e39e28",
                "cidr_block": "10.8.0.0/22",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-837d5de4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06e12140e5b9511a9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-091c8ecf7fcaba854",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "dxstrategy",
              "Name": "DxStrategySharedDBDev-VPC",
              "Owner": "DxStrategy",
              "Project": "dxstrategy",
              "Usage": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-06e12140e5b9511a9",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 28 03:44:24 IST 2024"
            }
          }
        },
        {
          "index_key": "vpc-06f17a82690ae6451",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-06f17a82690ae6451",
            "cidr_block": "10.6.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-058da40dad65c6848",
                "cidr_block": "10.6.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-837d5de4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06f17a82690ae6451",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dc6155f595d8be29",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "jarvis",
              "Name": "JarvisQa-VPC",
              "Owner": "Jarvis",
              "Project": "jarvis",
              "Usage": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-06f17a82690ae6451",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 28 03:44:21 IST 2024"
            }
          }
        },
        {
          "index_key": "vpc-086f357147014f9a7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-086f357147014f9a7",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-09943d2bad581f3b8",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-837d5de4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-086f357147014f9a7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0869e5f5e1963d802",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "bliss",
              "Name": "Bliss-Prod-VPC",
              "Owner": "Bliss",
              "Project": "bliss",
              "Usage": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-086f357147014f9a7",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 28 03:44:31 IST 2024"
            }
          }
        },
        {
          "index_key": "vpc-0873c29cd655a75b0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-0873c29cd655a75b0",
            "cidr_block": "10.100.0.0/21",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-00338b14884113d7e",
                "cidr_block": "10.100.0.0/21",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-837d5de4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0873c29cd655a75b0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04b94160a88c20905",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "dxplatform",
              "Managed": "Terraform",
              "Name": "dxpf-loganalysis-pro",
              "Owner": "Dxplatform",
              "Project": "dxplatform",
              "Usage": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-0873c29cd655a75b0",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 28 03:44:35 IST 2024"
            }
          }
        },
        {
          "index_key": "vpc-0b0d7d0e4a67ed700",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-0b0d7d0e4a67ed700",
            "cidr_block": "20.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e16c6a1875982810",
                "cidr_block": "20.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-837d5de4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b0d7d0e4a67ed700",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a787510209af3945",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "dxplatform",
              "Name": "RPA-Demo",
              "Project": "dxplatform",
              "Usage": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-0b0d7d0e4a67ed700",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 28 03:44:25 IST 2024"
            }
          }
        },
        {
          "index_key": "vpc-0ddcc7a1401565ac5",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-0ddcc7a1401565ac5",
            "cidr_block": "10.24.0.0/22",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0dac9be54d8f73b76",
                "cidr_block": "10.24.0.0/22",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-837d5de4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ddcc7a1401565ac5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01c9e4bad642b5ecd",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "cosmos",
              "Name": "COSMOSDev-VPC",
              "Owner": "COSMOS",
              "Project": "cosmos",
              "Usage": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpc-0ddcc7a1401565ac5",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 28 03:44:50 IST 2024"
            }
          }
        },
        {
          "index_key": "vpc-0e535d1dbdfc5d4e7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-0e535d1dbdfc5d4e7",
            "cidr_block": "10.10.0.0/23",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-02983d1f6b1519456",
                "cidr_block": "10.10.0.0/23",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-837d5de4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e535d1dbdfc5d4e7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a5a0ef3f0231f643",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "bliss",
              "Managed": "Terraform",
              "Name": "Bliss-Dev-VPC",
              "Owner": "Bliss",
              "Project": "bliss",
              "Usage": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-0e535d1dbdfc5d4e7",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 28 03:44:40 IST 2024"
            }
          }
        },
        {
          "index_key": "vpc-8481afe3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-8481afe3",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-02ed2969",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-837d5de4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-8481afe3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-5ff14c39",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "dxplatform",
              "Name": "default-vpc",
              "Project": "dxplatform",
              "Usage": "arn:aws:ec2:ap-southeast-1:768502287836:vpc/vpc-8481afe3",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 28 03:44:34 IST 2024"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_endpoints_ap_southeast_1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.vpc_endpoints_ap_southeast_1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-004a377b92163bec0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:route-table/rtb-02a7c6271e9bfb924",
            "id": "rtb-02a7c6271e9bfb924",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-004a377b92163bec0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-018f374d4d2269e9b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:route-table/rtb-0235a4f64d74d7a99",
            "id": "rtb-0235a4f64d74d7a99",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-018f374d4d2269e9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-02f15860069647990",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:route-table/rtb-08575b8f89e33a4bc",
            "id": "rtb-08575b8f89e33a4bc",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02f15860069647990"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0379fdb17072f4036",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:route-table/rtb-0eeb23c73394a006e",
            "id": "rtb-0eeb23c73394a006e",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0379fdb17072f4036"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-038e9a438ab205c10",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:route-table/rtb-06d33a609c487de78",
            "id": "rtb-06d33a609c487de78",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-038e9a438ab205c10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0434c079d71746cb3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:route-table/rtb-0dbf0b0bf2b4ffe32",
            "id": "rtb-0dbf0b0bf2b4ffe32",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0434c079d71746cb3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-063ed0302d264fdff",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:route-table/rtb-09faf87aa79416a8c",
            "id": "rtb-09faf87aa79416a8c",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-063ed0302d264fdff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-069564656011acce9",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:route-table/rtb-023de990b1f9db8bf",
            "id": "rtb-023de990b1f9db8bf",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-069564656011acce9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-06e12140e5b9511a9",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:route-table/rtb-0d24a5da0983390c6",
            "id": "rtb-0d24a5da0983390c6",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06e12140e5b9511a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-06f17a82690ae6451",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:route-table/rtb-0f5edc6e9297a6c25",
            "id": "rtb-0f5edc6e9297a6c25",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06f17a82690ae6451"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-086f357147014f9a7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:route-table/rtb-039aeccdb9d81829c",
            "id": "rtb-039aeccdb9d81829c",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-086f357147014f9a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0873c29cd655a75b0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:route-table/rtb-09ffa93aca7faabd9",
            "id": "rtb-09ffa93aca7faabd9",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0873c29cd655a75b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0b0d7d0e4a67ed700",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:route-table/rtb-0b14218632da3a22d",
            "id": "rtb-0b14218632da3a22d",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b0d7d0e4a67ed700"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0ddcc7a1401565ac5",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:route-table/rtb-0059c17f6b7e39e74",
            "id": "rtb-0059c17f6b7e39e74",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ddcc7a1401565ac5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0e535d1dbdfc5d4e7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:route-table/rtb-0cbd49be8ec5d5c8f",
            "id": "rtb-0cbd49be8ec5d5c8f",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e535d1dbdfc5d4e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-8481afe3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:route-table/rtb-098ebabee78a2276e",
            "id": "rtb-098ebabee78a2276e",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-8481afe3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints_ap_southeast_1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "endpoint",
      "provider": "module.vpc_endpoints_ap_southeast_1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-004a377b92163bec0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:security-group/sg-02ea753822e92a9fb",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-02ea753822e92a9fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.18.0.0/23"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-004a377b92163bec0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-018f374d4d2269e9b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:security-group/sg-038cc3afb6e4fc332",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-038cc3afb6e4fc332",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.7.0.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-018f374d4d2269e9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-02f15860069647990",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:security-group/sg-0610dce0a44ba05c6",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-0610dce0a44ba05c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.13.0.0/22"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02f15860069647990"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0379fdb17072f4036",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:security-group/sg-03b8109c3ed7afcd7",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-03b8109c3ed7afcd7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.12.0.0/22"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0379fdb17072f4036"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-038e9a438ab205c10",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:security-group/sg-0dc8a6a65d114c365",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-0dc8a6a65d114c365",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.22.0.0/23"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-038e9a438ab205c10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0434c079d71746cb3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:security-group/sg-02d1145449a9263e3",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-02d1145449a9263e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.21.0.0/23"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0434c079d71746cb3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-063ed0302d264fdff",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:security-group/sg-0cb24700e769d5008",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-0cb24700e769d5008",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.25.0.0/23"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-063ed0302d264fdff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-069564656011acce9",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:security-group/sg-0a5f61fe48cd11e8f",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-0a5f61fe48cd11e8f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.19.0.0/23"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-069564656011acce9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-06e12140e5b9511a9",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:security-group/sg-00ba5962da7859f17",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-00ba5962da7859f17",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.8.0.0/22"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06e12140e5b9511a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-06f17a82690ae6451",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:security-group/sg-0d63e49f59cd90932",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-0d63e49f59cd90932",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.6.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06f17a82690ae6451"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-086f357147014f9a7",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:security-group/sg-043f52282a0d298a1",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-043f52282a0d298a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-086f357147014f9a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0873c29cd655a75b0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:security-group/sg-0d23882f85f41b4d2",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-0d23882f85f41b4d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.100.0.0/21"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0873c29cd655a75b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0b0d7d0e4a67ed700",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:security-group/sg-08a1e0d518ca42fa7",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-08a1e0d518ca42fa7",
            "ingress": [
              {
                "cidr_blocks": [
                  "20.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b0d7d0e4a67ed700"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0ddcc7a1401565ac5",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:security-group/sg-057b50edb73001b7e",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-057b50edb73001b7e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.24.0.0/22"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ddcc7a1401565ac5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0e535d1dbdfc5d4e7",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:security-group/sg-0e1650202f52eb1fa",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-0e1650202f52eb1fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/23"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e535d1dbdfc5d4e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-8481afe3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:security-group/sg-055a6e9f9c43ea671",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-055a6e9f9c43ea671",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-8481afe3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints_ap_southeast_1",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "provider": "module.vpc_endpoints_ap_southeast_1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-004a377b92163bec0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0ec2b444238f749ad",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ec2b444238f749ad",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02ea753822e92a9fb"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-004a377b92163bec0-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-004a377b92163bec0-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-004a377b92163bec0"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-018f374d4d2269e9b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-067f350c82e7a1a39",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-067f350c82e7a1a39",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-038cc3afb6e4fc332"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-018f374d4d2269e9b-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-018f374d4d2269e9b-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-018f374d4d2269e9b"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-02f15860069647990",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-08ed3d85f0d2b528b",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08ed3d85f0d2b528b",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0610dce0a44ba05c6"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-02f15860069647990-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-02f15860069647990-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-02f15860069647990"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0379fdb17072f4036",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0a2a770315915bef9",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a2a770315915bef9",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03b8109c3ed7afcd7"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0379fdb17072f4036-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0379fdb17072f4036-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0379fdb17072f4036"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-038e9a438ab205c10",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0ccaa578ab59b55e5",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ccaa578ab59b55e5",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0dc8a6a65d114c365"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-038e9a438ab205c10-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-038e9a438ab205c10-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-038e9a438ab205c10"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0434c079d71746cb3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0fb4cea72121ea65b",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0fb4cea72121ea65b",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02d1145449a9263e3"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0434c079d71746cb3-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0434c079d71746cb3-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0434c079d71746cb3"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-063ed0302d264fdff",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-019f6f22022959180",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-019f6f22022959180",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0cb24700e769d5008"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-063ed0302d264fdff-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-063ed0302d264fdff-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-063ed0302d264fdff"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-069564656011acce9",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-037aa62d6e70bd3ec",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-037aa62d6e70bd3ec",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a5f61fe48cd11e8f"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-069564656011acce9-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-069564656011acce9-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-069564656011acce9"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-06e12140e5b9511a9",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0871d1bc13ddec533",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0871d1bc13ddec533",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-00ba5962da7859f17"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-06e12140e5b9511a9-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-06e12140e5b9511a9-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06e12140e5b9511a9"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-086f357147014f9a7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-08041e16cc5f074f7",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08041e16cc5f074f7",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-043f52282a0d298a1"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-086f357147014f9a7-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-086f357147014f9a7-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-086f357147014f9a7"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0873c29cd655a75b0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-031c242e96ff906b2",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-031c242e96ff906b2",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d23882f85f41b4d2"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0873c29cd655a75b0-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0873c29cd655a75b0-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0873c29cd655a75b0"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0ddcc7a1401565ac5",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0800d3cc373a34c25",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0800d3cc373a34c25",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-057b50edb73001b7e"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0ddcc7a1401565ac5-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0ddcc7a1401565ac5-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ddcc7a1401565ac5"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0e535d1dbdfc5d4e7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-05b7ea83f8cc6ab14",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05b7ea83f8cc6ab14",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e1650202f52eb1fa"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0e535d1dbdfc5d4e7-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0e535d1dbdfc5d4e7-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e535d1dbdfc5d4e7"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-8481afe3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0fd917e57108529b0",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0fd917e57108529b0",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-055a6e9f9c43ea671"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-8481afe3-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-8481afe3-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-8481afe3"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints_ap_southeast_1",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "module.vpc_endpoints_ap_southeast_1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-004a377b92163bec0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0cfa07a53a2b120af",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0cfa07a53a2b120af",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02ea753822e92a9fb"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-004a377b92163bec0-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-004a377b92163bec0-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-004a377b92163bec0"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-02f15860069647990",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0b4bdff831c63a505",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b4bdff831c63a505",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0610dce0a44ba05c6"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-02f15860069647990-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-02f15860069647990-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-02f15860069647990"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0379fdb17072f4036",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-02bb0b8f5dd1ffba1",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-02bb0b8f5dd1ffba1",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03b8109c3ed7afcd7"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0379fdb17072f4036-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0379fdb17072f4036-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0379fdb17072f4036"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-038e9a438ab205c10",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-06422fa74191c700c",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06422fa74191c700c",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0dc8a6a65d114c365"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-038e9a438ab205c10-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-038e9a438ab205c10-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-038e9a438ab205c10"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0434c079d71746cb3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0ead87a8a8992969a",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ead87a8a8992969a",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02d1145449a9263e3"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0434c079d71746cb3-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0434c079d71746cb3-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0434c079d71746cb3"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-063ed0302d264fdff",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0198489aa2b3242d8",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0198489aa2b3242d8",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0cb24700e769d5008"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-063ed0302d264fdff-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-063ed0302d264fdff-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-063ed0302d264fdff"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-069564656011acce9",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-096913e765f7c708c",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-096913e765f7c708c",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a5f61fe48cd11e8f"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-069564656011acce9-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-069564656011acce9-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-069564656011acce9"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-06e12140e5b9511a9",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-08ce2352422a31f05",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08ce2352422a31f05",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-00ba5962da7859f17"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-06e12140e5b9511a9-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-06e12140e5b9511a9-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06e12140e5b9511a9"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-06f17a82690ae6451",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0e614ac51c4e5c304",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e614ac51c4e5c304",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d63e49f59cd90932"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-06f17a82690ae6451-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-06f17a82690ae6451-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06f17a82690ae6451"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-086f357147014f9a7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-00331f271089bfddc",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00331f271089bfddc",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-043f52282a0d298a1"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-086f357147014f9a7-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-086f357147014f9a7-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-086f357147014f9a7"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0873c29cd655a75b0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0ddb9280e0394bffc",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ddb9280e0394bffc",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d23882f85f41b4d2"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0873c29cd655a75b0-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0873c29cd655a75b0-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0873c29cd655a75b0"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0ddcc7a1401565ac5",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-087b19e1fcb7cb39c",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-087b19e1fcb7cb39c",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-057b50edb73001b7e"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0ddcc7a1401565ac5-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0ddcc7a1401565ac5-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ddcc7a1401565ac5"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0e535d1dbdfc5d4e7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-019a10447ea2dfe58",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-019a10447ea2dfe58",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e1650202f52eb1fa"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0e535d1dbdfc5d4e7-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0e535d1dbdfc5d4e7-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e535d1dbdfc5d4e7"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-8481afe3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-01fc81aa7d84beb2a",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01fc81aa7d84beb2a",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-055a6e9f9c43ea671"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-8481afe3-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-8481afe3-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-8481afe3"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints_ap_southeast_1",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "module.vpc_endpoints_ap_southeast_1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-004a377b92163bec0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0d644a309687f04c5",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d644a309687f04c5",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02ea753822e92a9fb"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-004a377b92163bec0-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-004a377b92163bec0-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-004a377b92163bec0"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-02f15860069647990",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-081c8a1b2e84bc132",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-081c8a1b2e84bc132",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0610dce0a44ba05c6"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-02f15860069647990-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-02f15860069647990-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-02f15860069647990"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0379fdb17072f4036",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0ccf32577d30bb50a",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ccf32577d30bb50a",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03b8109c3ed7afcd7"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0379fdb17072f4036-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0379fdb17072f4036-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0379fdb17072f4036"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-038e9a438ab205c10",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-073ee7c3b36e417c3",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-073ee7c3b36e417c3",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0dc8a6a65d114c365"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-038e9a438ab205c10-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-038e9a438ab205c10-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-038e9a438ab205c10"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0434c079d71746cb3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-024e44a7a6d74bbba",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-024e44a7a6d74bbba",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02d1145449a9263e3"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0434c079d71746cb3-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0434c079d71746cb3-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0434c079d71746cb3"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-063ed0302d264fdff",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0ed04b38998b9aef1",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ed04b38998b9aef1",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0cb24700e769d5008"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-063ed0302d264fdff-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-063ed0302d264fdff-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-063ed0302d264fdff"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-069564656011acce9",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0eb41e267794282ff",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0eb41e267794282ff",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a5f61fe48cd11e8f"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-069564656011acce9-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-069564656011acce9-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-069564656011acce9"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-06e12140e5b9511a9",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0b488b4fcce7ff70a",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b488b4fcce7ff70a",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-00ba5962da7859f17"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-06e12140e5b9511a9-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-06e12140e5b9511a9-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06e12140e5b9511a9"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-06f17a82690ae6451",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0569526507a655ee6",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0569526507a655ee6",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d63e49f59cd90932"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-06f17a82690ae6451-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-06f17a82690ae6451-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06f17a82690ae6451"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-086f357147014f9a7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-033433a3a52b1e124",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-033433a3a52b1e124",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-043f52282a0d298a1"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-086f357147014f9a7-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-086f357147014f9a7-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-086f357147014f9a7"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0873c29cd655a75b0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0246ec580e045e3fa",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0246ec580e045e3fa",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d23882f85f41b4d2"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0873c29cd655a75b0-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0873c29cd655a75b0-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0873c29cd655a75b0"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0ddcc7a1401565ac5",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-08a8534946b30106d",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08a8534946b30106d",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-057b50edb73001b7e"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0ddcc7a1401565ac5-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0ddcc7a1401565ac5-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ddcc7a1401565ac5"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0e535d1dbdfc5d4e7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0e8b0c5edd208ebc0",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e8b0c5edd208ebc0",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e1650202f52eb1fa"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0e535d1dbdfc5d4e7-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0e535d1dbdfc5d4e7-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e535d1dbdfc5d4e7"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-8481afe3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0f20e720f7b1acd4b",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f20e720f7b1acd4b",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-055a6e9f9c43ea671"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-8481afe3-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-8481afe3-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-8481afe3"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints_ap_southeast_1",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "lambda",
      "provider": "module.vpc_endpoints_ap_southeast_1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-004a377b92163bec0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0248e65a200dddd91",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0248e65a200dddd91",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02ea753822e92a9fb"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-004a377b92163bec0-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-004a377b92163bec0-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-004a377b92163bec0"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-018f374d4d2269e9b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0997d193acc2b31cc",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0997d193acc2b31cc",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-038cc3afb6e4fc332"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-018f374d4d2269e9b-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-018f374d4d2269e9b-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-018f374d4d2269e9b"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-02f15860069647990",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-00fa031e9d86d6a7e",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00fa031e9d86d6a7e",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0610dce0a44ba05c6"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-02f15860069647990-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-02f15860069647990-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-02f15860069647990"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0379fdb17072f4036",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-07f81835ff1a2d0c9",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07f81835ff1a2d0c9",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03b8109c3ed7afcd7"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0379fdb17072f4036-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0379fdb17072f4036-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0379fdb17072f4036"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-038e9a438ab205c10",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0e6b5d179dcccb33b",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e6b5d179dcccb33b",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0dc8a6a65d114c365"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-038e9a438ab205c10-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-038e9a438ab205c10-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-038e9a438ab205c10"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0434c079d71746cb3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0740becf53229ed7f",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0740becf53229ed7f",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02d1145449a9263e3"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0434c079d71746cb3-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0434c079d71746cb3-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0434c079d71746cb3"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-063ed0302d264fdff",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0fea2b99bf7f3b631",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0fea2b99bf7f3b631",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0cb24700e769d5008"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-063ed0302d264fdff-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-063ed0302d264fdff-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-063ed0302d264fdff"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-069564656011acce9",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-03615d43b720490c9",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03615d43b720490c9",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a5f61fe48cd11e8f"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-069564656011acce9-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-069564656011acce9-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-069564656011acce9"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-06e12140e5b9511a9",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-01b97039913392734",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01b97039913392734",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-00ba5962da7859f17"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-06e12140e5b9511a9-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-06e12140e5b9511a9-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06e12140e5b9511a9"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-06f17a82690ae6451",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0ce6b4b611a03e9f0",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ce6b4b611a03e9f0",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d63e49f59cd90932"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-06f17a82690ae6451-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-06f17a82690ae6451-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06f17a82690ae6451"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-086f357147014f9a7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0a1be62037fcbf573",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a1be62037fcbf573",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-043f52282a0d298a1"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-086f357147014f9a7-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-086f357147014f9a7-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-086f357147014f9a7"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0873c29cd655a75b0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-051d03af758dcef8d",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-051d03af758dcef8d",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d23882f85f41b4d2"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0873c29cd655a75b0-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0873c29cd655a75b0-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0873c29cd655a75b0"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0ddcc7a1401565ac5",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-05a82801da050e12a",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05a82801da050e12a",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-057b50edb73001b7e"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0ddcc7a1401565ac5-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0ddcc7a1401565ac5-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ddcc7a1401565ac5"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0e535d1dbdfc5d4e7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0b233ecfd52e5d3da",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b233ecfd52e5d3da",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e1650202f52eb1fa"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0e535d1dbdfc5d4e7-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0e535d1dbdfc5d4e7-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e535d1dbdfc5d4e7"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-8481afe3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-069b753bccb7a0dfd",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-069b753bccb7a0dfd",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-055a6e9f9c43ea671"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-8481afe3-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-8481afe3-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-8481afe3"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_security_group.endpoint",
            "module.vpc_endpoints_ap_southeast_1.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpc.selected",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints_ap_southeast_1",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "module.vpc_endpoints_ap_southeast_1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-004a377b92163bec0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0e2c778906f79af94",
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "18.34.248.0/22",
              "3.5.148.0/22",
              "18.34.64.0/21",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "id": "vpce-0e2c778906f79af94",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-02a7c6271e9bfb924"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-004a377b92163bec0-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-004a377b92163bec0-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-004a377b92163bec0"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_route_table.private",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-018f374d4d2269e9b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0c3dd688ed0e3ae42",
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "18.34.248.0/22",
              "3.5.148.0/22",
              "18.34.64.0/21",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "id": "vpce-0c3dd688ed0e3ae42",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0235a4f64d74d7a99"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-018f374d4d2269e9b-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-018f374d4d2269e9b-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-018f374d4d2269e9b"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_route_table.private",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-02f15860069647990",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0cff969bfe8dd2916",
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "18.34.248.0/22",
              "3.5.148.0/22",
              "18.34.64.0/21",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "id": "vpce-0cff969bfe8dd2916",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-08575b8f89e33a4bc"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-02f15860069647990-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-02f15860069647990-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-02f15860069647990"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_route_table.private",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0379fdb17072f4036",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-00738dc3897510ca6",
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "18.34.248.0/22",
              "3.5.148.0/22",
              "18.34.64.0/21",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "id": "vpce-00738dc3897510ca6",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0eeb23c73394a006e"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0379fdb17072f4036-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0379fdb17072f4036-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0379fdb17072f4036"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_route_table.private",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-038e9a438ab205c10",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0ef97e53b1958f74e",
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "18.34.248.0/22",
              "3.5.148.0/22",
              "18.34.64.0/21",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "id": "vpce-0ef97e53b1958f74e",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-06d33a609c487de78"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-038e9a438ab205c10-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-038e9a438ab205c10-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-038e9a438ab205c10"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_route_table.private",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0434c079d71746cb3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0dfa3651132308c4b",
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "18.34.248.0/22",
              "3.5.148.0/22",
              "18.34.64.0/21",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "id": "vpce-0dfa3651132308c4b",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0dbf0b0bf2b4ffe32"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0434c079d71746cb3-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0434c079d71746cb3-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0434c079d71746cb3"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_route_table.private",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-063ed0302d264fdff",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0cb0dfb05b37ae724",
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "18.34.248.0/22",
              "3.5.148.0/22",
              "18.34.64.0/21",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "id": "vpce-0cb0dfb05b37ae724",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-09faf87aa79416a8c"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-063ed0302d264fdff-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-063ed0302d264fdff-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-063ed0302d264fdff"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_route_table.private",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-069564656011acce9",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-06555deaef5a00deb",
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "18.34.248.0/22",
              "3.5.148.0/22",
              "18.34.64.0/21",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "id": "vpce-06555deaef5a00deb",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-023de990b1f9db8bf"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-069564656011acce9-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-069564656011acce9-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-069564656011acce9"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_route_table.private",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-06e12140e5b9511a9",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0e6a76a3ca4298536",
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "18.34.248.0/22",
              "3.5.148.0/22",
              "18.34.64.0/21",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "id": "vpce-0e6a76a3ca4298536",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0d24a5da0983390c6"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-06e12140e5b9511a9-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-06e12140e5b9511a9-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-06e12140e5b9511a9"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_route_table.private",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-06f17a82690ae6451",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-08f870cab9d5eece0",
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "18.34.248.0/22",
              "3.5.148.0/22",
              "18.34.64.0/21",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "id": "vpce-08f870cab9d5eece0",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0f5edc6e9297a6c25"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-06f17a82690ae6451-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-06f17a82690ae6451-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-06f17a82690ae6451"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_route_table.private",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-086f357147014f9a7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0822ed47d7ad09635",
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "18.34.248.0/22",
              "3.5.148.0/22",
              "18.34.64.0/21",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "id": "vpce-0822ed47d7ad09635",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-039aeccdb9d81829c"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-086f357147014f9a7-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-086f357147014f9a7-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-086f357147014f9a7"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_route_table.private",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0873c29cd655a75b0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-01f219482813f20aa",
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "18.34.248.0/22",
              "3.5.148.0/22",
              "18.34.64.0/21",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "id": "vpce-01f219482813f20aa",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-09ffa93aca7faabd9"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0873c29cd655a75b0-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0873c29cd655a75b0-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0873c29cd655a75b0"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_route_table.private",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0b0d7d0e4a67ed700",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0bc9448d192b03700",
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "18.34.248.0/22",
              "3.5.148.0/22",
              "18.34.64.0/21",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "id": "vpce-0bc9448d192b03700",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0b14218632da3a22d"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0b0d7d0e4a67ed700-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0b0d7d0e4a67ed700-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0b0d7d0e4a67ed700"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_route_table.private",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0ddcc7a1401565ac5",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0ecaa9cd6f21555a7",
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "18.34.248.0/22",
              "3.5.148.0/22",
              "18.34.64.0/21",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "id": "vpce-0ecaa9cd6f21555a7",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0059c17f6b7e39e74"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0ddcc7a1401565ac5-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0ddcc7a1401565ac5-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0ddcc7a1401565ac5"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_route_table.private",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0e535d1dbdfc5d4e7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-0ee401b8bc459338d",
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "18.34.248.0/22",
              "3.5.148.0/22",
              "18.34.64.0/21",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "id": "vpce-0ee401b8bc459338d",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0cbd49be8ec5d5c8f"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0e535d1dbdfc5d4e7-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0e535d1dbdfc5d4e7-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0e535d1dbdfc5d4e7"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_route_table.private",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-8481afe3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:768502287836:vpc-endpoint/vpce-005216368a98a35ff",
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "18.34.248.0/22",
              "3.5.148.0/22",
              "18.34.64.0/21",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "id": "vpce-005216368a98a35ff",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-098ebabee78a2276e"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-8481afe3-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-8481afe3-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-8481afe3"
          },
          "dependencies": [
            "module.vpc_endpoints_ap_southeast_1.aws_route_table.private",
            "module.vpc_endpoints_ap_southeast_1.data.aws_vpcs.all_vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints_us_west_2",
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "module.vpc_endpoints_us_west_2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-01264de7c037cbbe4",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-01264de7c037cbbe4",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-09ca7e5a569198f54",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-b8804ac0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01264de7c037cbbe4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06bbcc347a5d56116",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "ESSENSUOUS",
              "Name": "ESSENSUOUS-Prd-VPC",
              "Project": "dxplatform",
              "Usage": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-01264de7c037cbbe4",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 28 04:30:12 IST 2024"
            }
          }
        },
        {
          "index_key": "vpc-021ddb54db13428b2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-021ddb54db13428b2",
            "cidr_block": "192.168.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0badb67cfcc7e3caf",
                "cidr_block": "192.168.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-b8804ac0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-021ddb54db13428b2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01c5e4fb9fab7390a",
            "owner_id": "768502287836",
            "tags": {
              "Initiative": "DX-IN-TechOps",
              "Managed": "Terraform",
              "Name": "DX-VPC",
              "Project": "dx-test",
              "Usage": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-021ddb54db13428b2",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 28 04:30:12 IST 2024"
            }
          }
        },
        {
          "index_key": "vpc-041a1132552c39c34",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-041a1132552c39c34",
            "cidr_block": "10.27.0.0/23",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0be68cb5d8154ad73",
                "cidr_block": "10.27.0.0/23",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-b8804ac0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-041a1132552c39c34",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f912384a122ce4f3",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "dxpf-demo",
              "Environment": "Dev",
              "Initiative": "jp",
              "Managed": "Terraform",
              "Name": "dxpf-demo-Dev-VPC",
              "Owner": "dxpf-demo",
              "Project": "dxpf-demo",
              "Usage": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-041a1132552c39c34",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 28 04:30:10 IST 2024"
            }
          }
        },
        {
          "index_key": "vpc-0729e0862e6c07fa3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-0729e0862e6c07fa3",
            "cidr_block": "10.23.0.0/23",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-081f0e28000209964",
                "cidr_block": "10.23.0.0/23",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-b8804ac0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0729e0862e6c07fa3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ceec275055d1f721",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "dxplatform",
              "Environment": "Dev",
              "Managed": "Terraform",
              "Name": "dxpf-osds-Dev-operator-ec2-VPC",
              "Owner": "dxplatform",
              "Project": "dxpf-osds",
              "Usage": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-0729e0862e6c07fa3",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 28 04:30:13 IST 2024"
            }
          }
        },
        {
          "index_key": "vpc-08c176c702b4e8c82",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-08c176c702b4e8c82",
            "cidr_block": "172.16.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-062454b2a202edaf5",
                "cidr_block": "172.16.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-b8804ac0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08c176c702b4e8c82",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0de43fc0600660b2a",
            "owner_id": "768502287836",
            "tags": {
              "AWSServiceAccount": "180699916525",
              "Billing": "dxplatform",
              "Project": "dxplatform",
              "Usage": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-08c176c702b4e8c82",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 28 04:30:14 IST 2024"
            }
          }
        },
        {
          "index_key": "vpc-0ea0ec53556654812",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-0ea0ec53556654812",
            "cidr_block": "10.38.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-04ce9121c10d35d15",
                "cidr_block": "10.38.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-b8804ac0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": true,
            "id": "vpc-0ea0ec53556654812",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cbf19bcb695a7a9b",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "eams",
              "Environment": "Dev",
              "Initiative": "IN",
              "Managed": "Terraform",
              "Name": "eams-new-Dev-VPC",
              "Owner": "eams",
              "Project": "eams",
              "Usage": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-0ea0ec53556654812",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 28 04:30:15 IST 2024"
            }
          }
        },
        {
          "index_key": "vpc-0f8d49fece7838519",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-0f8d49fece7838519",
            "cidr_block": "10.9.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a76f80e9ae7e082b",
                "cidr_block": "10.9.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-b8804ac0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f8d49fece7838519",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b274fb4878d68ba7",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "Dxplatfrom",
              "Managed": "Terraform",
              "Name": "DX_Platform-VPC",
              "Owner": "Dxplatfrom",
              "Project": "Dxplatform",
              "Usage": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-0f8d49fece7838519",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 28 04:30:11 IST 2024",
              "createdby": "IAM-None"
            }
          }
        },
        {
          "index_key": "vpc-b6835ece",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-b6835ece",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-34731b5e",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-b8804ac0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-b6835ece",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-835de2f8",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "dxplatform",
              "Project": "dxplatform",
              "Usage": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpc-b6835ece",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 28 04:30:47 IST 2024"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_endpoints_us_west_2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.vpc_endpoints_us_west_2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-01264de7c037cbbe4",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:route-table/rtb-01a77ad796605d22f",
            "id": "rtb-01a77ad796605d22f",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01264de7c037cbbe4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-021ddb54db13428b2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:route-table/rtb-0b2d139774913e26e",
            "id": "rtb-0b2d139774913e26e",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-021ddb54db13428b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-041a1132552c39c34",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:route-table/rtb-08f35c5a8352532dc",
            "id": "rtb-08f35c5a8352532dc",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-041a1132552c39c34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0729e0862e6c07fa3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:route-table/rtb-0c06fbdb8652a1df6",
            "id": "rtb-0c06fbdb8652a1df6",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0729e0862e6c07fa3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-08c176c702b4e8c82",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:route-table/rtb-01dc21c9c4df8ca13",
            "id": "rtb-01dc21c9c4df8ca13",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08c176c702b4e8c82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0ea0ec53556654812",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:route-table/rtb-0e033aeaa326aff7e",
            "id": "rtb-0e033aeaa326aff7e",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ea0ec53556654812"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0f8d49fece7838519",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:route-table/rtb-06f4f2eae38abacb4",
            "id": "rtb-06f4f2eae38abacb4",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f8d49fece7838519"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-b6835ece",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:route-table/rtb-01651863e06623904",
            "id": "rtb-01651863e06623904",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-b6835ece"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints_us_west_2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "endpoint",
      "provider": "module.vpc_endpoints_us_west_2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-01264de7c037cbbe4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:security-group/sg-05c3d1e3df192ce23",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-05c3d1e3df192ce23",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01264de7c037cbbe4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-021ddb54db13428b2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:security-group/sg-01837aadfeb03961d",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-01837aadfeb03961d",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-021ddb54db13428b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-041a1132552c39c34",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:security-group/sg-09690d158a8cb1e1d",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-09690d158a8cb1e1d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.27.0.0/23"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-041a1132552c39c34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0729e0862e6c07fa3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:security-group/sg-0ff2e8034b43eff5d",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-0ff2e8034b43eff5d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.23.0.0/23"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0729e0862e6c07fa3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-08c176c702b4e8c82",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:security-group/sg-09466de1ffdfe87c2",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-09466de1ffdfe87c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08c176c702b4e8c82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0ea0ec53556654812",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:security-group/sg-0f53266f7012cc1fe",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-0f53266f7012cc1fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.38.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ea0ec53556654812"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0f8d49fece7838519",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:security-group/sg-09cd66fcc6ba1055f",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-09cd66fcc6ba1055f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.9.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f8d49fece7838519"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-b6835ece",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:security-group/sg-0948dd554fc939d52",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-0948dd554fc939d52",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-b6835ece"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints_us_west_2",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "provider": "module.vpc_endpoints_us_west_2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-021ddb54db13428b2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-05f83de33099fa8ba",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05f83de33099fa8ba",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01837aadfeb03961d"
            ],
            "service_name": "com.amazonaws.us-west-2.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-021ddb54db13428b2-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-021ddb54db13428b2-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-021ddb54db13428b2"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_security_group.endpoint",
            "module.vpc_endpoints_us_west_2.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-041a1132552c39c34",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0a39b10c9decb83d2",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a39b10c9decb83d2",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09690d158a8cb1e1d"
            ],
            "service_name": "com.amazonaws.us-west-2.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-041a1132552c39c34-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-041a1132552c39c34-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-041a1132552c39c34"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_security_group.endpoint",
            "module.vpc_endpoints_us_west_2.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0729e0862e6c07fa3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0c49ef3f1f8a3ffed",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c49ef3f1f8a3ffed",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ff2e8034b43eff5d"
            ],
            "service_name": "com.amazonaws.us-west-2.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0729e0862e6c07fa3-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0729e0862e6c07fa3-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0729e0862e6c07fa3"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_security_group.endpoint",
            "module.vpc_endpoints_us_west_2.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0ea0ec53556654812",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-04648eda69381ba06",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04648eda69381ba06",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f53266f7012cc1fe"
            ],
            "service_name": "com.amazonaws.us-west-2.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0ea0ec53556654812-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0ea0ec53556654812-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ea0ec53556654812"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_security_group.endpoint",
            "module.vpc_endpoints_us_west_2.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0f8d49fece7838519",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-09e0a90e238955837",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-09e0a90e238955837",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09cd66fcc6ba1055f"
            ],
            "service_name": "com.amazonaws.us-west-2.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0f8d49fece7838519-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0f8d49fece7838519-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f8d49fece7838519"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_security_group.endpoint",
            "module.vpc_endpoints_us_west_2.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-b6835ece",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-00712983c6c93ddcd",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00712983c6c93ddcd",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0948dd554fc939d52"
            ],
            "service_name": "com.amazonaws.us-west-2.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-b6835ece-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-b6835ece-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-b6835ece"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_security_group.endpoint",
            "module.vpc_endpoints_us_west_2.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints_us_west_2",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "module.vpc_endpoints_us_west_2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-021ddb54db13428b2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-03296f4fe06e04e29",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03296f4fe06e04e29",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01837aadfeb03961d"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-021ddb54db13428b2-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-021ddb54db13428b2-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-021ddb54db13428b2"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_security_group.endpoint",
            "module.vpc_endpoints_us_west_2.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-041a1132552c39c34",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0f38a558aa045df21",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f38a558aa045df21",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09690d158a8cb1e1d"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-041a1132552c39c34-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-041a1132552c39c34-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-041a1132552c39c34"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_security_group.endpoint",
            "module.vpc_endpoints_us_west_2.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0729e0862e6c07fa3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0c7d00361db376472",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c7d00361db376472",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ff2e8034b43eff5d"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0729e0862e6c07fa3-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0729e0862e6c07fa3-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0729e0862e6c07fa3"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_security_group.endpoint",
            "module.vpc_endpoints_us_west_2.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0ea0ec53556654812",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0d003041dac82c4d6",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d003041dac82c4d6",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f53266f7012cc1fe"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0ea0ec53556654812-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0ea0ec53556654812-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ea0ec53556654812"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_security_group.endpoint",
            "module.vpc_endpoints_us_west_2.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0f8d49fece7838519",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-04aa99311f3d9b670",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04aa99311f3d9b670",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09cd66fcc6ba1055f"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0f8d49fece7838519-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0f8d49fece7838519-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f8d49fece7838519"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_security_group.endpoint",
            "module.vpc_endpoints_us_west_2.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-b6835ece",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-04f56037f67650dcd",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04f56037f67650dcd",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0948dd554fc939d52"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-b6835ece-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-b6835ece-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-b6835ece"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_security_group.endpoint",
            "module.vpc_endpoints_us_west_2.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints_us_west_2",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "module.vpc_endpoints_us_west_2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-021ddb54db13428b2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-03e04b619f0f9c7f7",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03e04b619f0f9c7f7",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01837aadfeb03961d"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-021ddb54db13428b2-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-021ddb54db13428b2-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-021ddb54db13428b2"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_security_group.endpoint",
            "module.vpc_endpoints_us_west_2.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-041a1132552c39c34",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0c44716ea1578368b",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c44716ea1578368b",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09690d158a8cb1e1d"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-041a1132552c39c34-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-041a1132552c39c34-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-041a1132552c39c34"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_security_group.endpoint",
            "module.vpc_endpoints_us_west_2.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0729e0862e6c07fa3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-04ae696fb96bbd104",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04ae696fb96bbd104",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ff2e8034b43eff5d"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0729e0862e6c07fa3-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0729e0862e6c07fa3-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0729e0862e6c07fa3"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_security_group.endpoint",
            "module.vpc_endpoints_us_west_2.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0ea0ec53556654812",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0b8a9bc9864f28c91",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b8a9bc9864f28c91",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f53266f7012cc1fe"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0ea0ec53556654812-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0ea0ec53556654812-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ea0ec53556654812"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_security_group.endpoint",
            "module.vpc_endpoints_us_west_2.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0f8d49fece7838519",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0d016e5ec116ed24f",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d016e5ec116ed24f",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09cd66fcc6ba1055f"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0f8d49fece7838519-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0f8d49fece7838519-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f8d49fece7838519"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_security_group.endpoint",
            "module.vpc_endpoints_us_west_2.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-b6835ece",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0a29eb685adf01514",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a29eb685adf01514",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0948dd554fc939d52"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-b6835ece-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-b6835ece-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-b6835ece"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_security_group.endpoint",
            "module.vpc_endpoints_us_west_2.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints_us_west_2",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "lambda",
      "provider": "module.vpc_endpoints_us_west_2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-021ddb54db13428b2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-05c472de8673b1b9e",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05c472de8673b1b9e",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01837aadfeb03961d"
            ],
            "service_name": "com.amazonaws.us-west-2.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-021ddb54db13428b2-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-021ddb54db13428b2-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-021ddb54db13428b2"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_security_group.endpoint",
            "module.vpc_endpoints_us_west_2.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-041a1132552c39c34",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0adce2e4b172069dc",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0adce2e4b172069dc",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09690d158a8cb1e1d"
            ],
            "service_name": "com.amazonaws.us-west-2.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-041a1132552c39c34-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-041a1132552c39c34-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-041a1132552c39c34"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_security_group.endpoint",
            "module.vpc_endpoints_us_west_2.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0729e0862e6c07fa3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-03c1c4ba553f514fa",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03c1c4ba553f514fa",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ff2e8034b43eff5d"
            ],
            "service_name": "com.amazonaws.us-west-2.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0729e0862e6c07fa3-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0729e0862e6c07fa3-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0729e0862e6c07fa3"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_security_group.endpoint",
            "module.vpc_endpoints_us_west_2.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0ea0ec53556654812",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0478718becde59650",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0478718becde59650",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f53266f7012cc1fe"
            ],
            "service_name": "com.amazonaws.us-west-2.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0ea0ec53556654812-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0ea0ec53556654812-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ea0ec53556654812"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_security_group.endpoint",
            "module.vpc_endpoints_us_west_2.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0f8d49fece7838519",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-061ef8fce5487ff43",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-061ef8fce5487ff43",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09cd66fcc6ba1055f"
            ],
            "service_name": "com.amazonaws.us-west-2.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0f8d49fece7838519-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0f8d49fece7838519-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f8d49fece7838519"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_security_group.endpoint",
            "module.vpc_endpoints_us_west_2.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-b6835ece",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0cb16f4ae6319dc15",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0cb16f4ae6319dc15",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0948dd554fc939d52"
            ],
            "service_name": "com.amazonaws.us-west-2.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-b6835ece-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-b6835ece-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-b6835ece"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_security_group.endpoint",
            "module.vpc_endpoints_us_west_2.data.aws_subnets.private_subnets",
            "module.vpc_endpoints_us_west_2.data.aws_vpc.selected",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints_us_west_2",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "module.vpc_endpoints_us_west_2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-01264de7c037cbbe4",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-008ef8457cb605abb",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-008ef8457cb605abb",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-01a77ad796605d22f"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-01264de7c037cbbe4-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-01264de7c037cbbe4-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-01264de7c037cbbe4"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_route_table.private",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-021ddb54db13428b2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0c6bb83d10c6ad552",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-0c6bb83d10c6ad552",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0b2d139774913e26e"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-021ddb54db13428b2-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-021ddb54db13428b2-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-021ddb54db13428b2"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_route_table.private",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-041a1132552c39c34",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0b7713127e8d2534b",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-0b7713127e8d2534b",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-08f35c5a8352532dc"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-041a1132552c39c34-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-041a1132552c39c34-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-041a1132552c39c34"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_route_table.private",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0729e0862e6c07fa3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-06613e3b5cc0c7cbd",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-06613e3b5cc0c7cbd",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0c06fbdb8652a1df6"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0729e0862e6c07fa3-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0729e0862e6c07fa3-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0729e0862e6c07fa3"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_route_table.private",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-08c176c702b4e8c82",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0ca7efb03d9cb1778",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-0ca7efb03d9cb1778",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-01dc21c9c4df8ca13"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-08c176c702b4e8c82-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-08c176c702b4e8c82-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-08c176c702b4e8c82"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_route_table.private",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0ea0ec53556654812",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0760006e24295b79a",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-0760006e24295b79a",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0e033aeaa326aff7e"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0ea0ec53556654812-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0ea0ec53556654812-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0ea0ec53556654812"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_route_table.private",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0f8d49fece7838519",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0a58949b8e7b4f69c",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-0a58949b8e7b4f69c",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-06f4f2eae38abacb4"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0f8d49fece7838519-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0f8d49fece7838519-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0f8d49fece7838519"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_route_table.private",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-b6835ece",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-049359dd1097168bf",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-049359dd1097168bf",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-01651863e06623904"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-b6835ece-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-b6835ece-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-b6835ece"
          },
          "dependencies": [
            "module.vpc_endpoints_us_west_2.aws_route_table.private",
            "module.vpc_endpoints_us_west_2.data.aws_vpcs.all_vpcs"
          ]
        }
      ]
    }
  ]
}